--- a/CG_kadai_02.html
+++ b/CG_kadai_02.html
@@ -184,7 +184,7 @@ scene.add( roof );
       requestAnimationFrame(update);
 
       //全体を回転
-      all.rotation.y += 0.01;
+     // all.rotation.y += 0.01;
 
       renderer.render(scene, camera);
     };
