--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title>コンピューターグラフィックス演習課題</title>
+</head>
 <body>
-<h1>Hello World</h1>
-こんにちは
-CG_kadai_01.html
+    <h1>WebGL(2)</h1>
+    
 </body>
 </html>
