--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>コンピューターグラフィックス演習課題</title>
 </head>
 <body>
-    <h1>WebGL(2)</h1>
-    
+    <h1>WebGL(2)課題</h1>
+    <p>
+        テクスチャ―マッピング：<a href="CG_kadai_02.html">CG_kadai_02.html</a><br>
+    </p>
+
 </body>
 </html>
