--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>WebGL(2)課題</h1>
     <p>
         テクスチャ―マッピング：<a href="CG_kadai_02.html">CG_kadai_02.html</a><br>
+        ペンギンの横にある家の壁紙にテクスチャを付けました。
     </p>
 
 </body>
