--- a/CG_kadai_02.html
+++ b/CG_kadai_02.html
@@ -153,7 +153,6 @@ scene.add( roof );
     penguin.add(Rhand); // 右手を追加  
     penguin.add(Lhand); // 左手を追加
     penguin.position.set(-1.7,0,0);
-    penguin.receiveShadow = true;
     scene.add(penguin);
 
 //全体のオブジェクト（家）
@@ -170,18 +169,29 @@ scene.add( roof );
     all.add(plane);
     all.position.set(0,0,-10);
     scene.add(all);
+    
+// 平行光源(色、強さ）主光源
+var directionalLightM = new THREE.DirectionalLight(0xffffff,0.3);
+directionalLightM.position.set(0, 10, -5);
+//directionalLightM.castShadow = true; 
+//シーンに追加
+scene.add(directionalLightM);
 
-    // 平行光源1
-    var directionalLight1 = new THREE.DirectionalLight(0xffffff);
-    directionalLight1.position.set(1, 1, 1);
-    // シーンに追加
-    scene.add(directionalLight1);
-    // 平行光源2
-        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
-    directionalLight2.position.set(-1, 1, 1);
-    // シーンに追加
-    scene.add(directionalLight2);
+// 照明を作成SpotLight(色, 光の強さ, 距離, 照射角, ボケ具合, 減衰率)
+var light = new THREE.SpotLight(0xffffff, 1, 100, Math.PI / 6, 0.2);
+light.position.set(0,10, -5);
+//light.target.position.set( 0, 5, -100 );
+// ライトに影を有効にする
+light.castShadow = true;
+//light.shadow.mapSize.width = 2048;
+//light.shadow.mapSize.height = 2048;
+scene.add(light);
 
+// 平行光源(色、強さ）補助光源
+var directionalLightS = new THREE.DirectionalLight(0xffffff,0.3);
+directionalLightS.position.set(-1, -1, 1);
+// シーンに追加
+//scene.add(directionalLightS);
     // 初回実行
     var update = function() {
       requestAnimationFrame(update);
