--- a/CG_kadai_02.html
+++ b/CG_kadai_02.html
@@ -198,7 +198,7 @@ directionalLightS.position.set(-1, -1, 1);
       requestAnimationFrame(update);
 
       //全体を回転
-     // all.rotation.y += 0.01;
+      all.rotation.y += 0.01;
 
       renderer.render(scene, camera);
     };
