--- a/CG_kadai_02.html
+++ b/CG_kadai_02.html
@@ -153,7 +153,7 @@ scene.add( roof );
     penguin.add(Rhand); // 右手を追加  
     penguin.add(Lhand); // 左手を追加
     penguin.position.set(-1.7,0,0);
-   // penguin.castShadow = true;
+    penguin.castShadow = true;
     scene.add(penguin);
 
 //全体のオブジェクト（家）
@@ -198,7 +198,7 @@ directionalLightS.position.set(-1, -1, 1);
       requestAnimationFrame(update);
 
       //全体を回転
-      all.rotation.y += 0.01;
+      //all.rotation.y += 0.01;
 
       renderer.render(scene, camera);
     };
