--- a/CG_kadai_03.html
+++ b/CG_kadai_03.html
@@ -38,7 +38,7 @@ var planeGeometry = new THREE.PlaneGeometry(10,10);
 var planeMaterial = new THREE.MeshPhongMaterial({ color: 0x00ff00 });
 var plane = new THREE.Mesh(planeGeometry,planeMaterial);
 plane.receiveShadow = true;
-//plane.rotation.set( -Math.PI/2, 0, 0 );
+plane.rotation.set( -Math.PI/2, 0, 0 );
 plane.position.set(0,-1.5,-6);
 scene.add(plane);
 
