--- a/CG_kadai_03.html
+++ b/CG_kadai_03.html
@@ -93,6 +93,8 @@ var update = function() {
  cone.rotation.z -= 0.01;
  cone.rotation.y -= 0.01;
 
+ plane.rotation.z -= 0.01;
+
   renderer.render(scene, camera);
 };
 update();
