--- a/CG_kadai_02.html
+++ b/CG_kadai_02.html
@@ -30,7 +30,7 @@
   
 //平面を作成
 var geometry = new THREE.PlaneGeometry( 7, 7, 7 );
-var material = new THREE.MeshPhongMaterial( {color: 0x00ff00, side: THREE.DoubleSide} );
+var material = new THREE.MeshPhongMaterial( {color: 0xffffff, side: THREE.DoubleSide} );
 var plane = new THREE.Mesh( geometry, material );
 plane.position.set(0,-1.1,-1);
 plane.rotation.x = 1.57;
