--- a/kagamimoti.html
+++ b/kagamimoti.html
@@ -115,7 +115,7 @@
 
     // テクスチャー読み込み
     var textureLoader = new THREE.TextureLoader();  
-    var texture = textureLoader.load("red.png");
+    var texture = textureLoader.load("red.jpg");
     var mat = new THREE.MeshPhongMaterial();
     mat.map = texture;
   
