--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         テクスチャ―マッピング：<a href="CG_kadai_02.html">CG_kadai_02.html</a><br>
         ペンギンの横にある家の壁紙にテクスチャを付けました。
     </p>
-
+    <p>
+        影をつける：<a href="suica.html">suica.html</a><br>
+        スイカに影を付けました。
+    </p>
 </body>
 </html>
