--- a/CG_kadai_02.html
+++ b/CG_kadai_02.html
@@ -39,7 +39,7 @@ scene.add( plane );
 //頭を作成
 var sphereGeometry = new THREE.SphereGeometry( 0.5, 32, 32 ); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x999999} );
+var sphereMaterial = new THREE. MeshStandardMaterial( {color: 0x999999} );
 var head = new THREE.Mesh( sphereGeometry, sphereMaterial );
 head.position.set( 0, 1.3, 0 );
 scene.add( head );
