--- a/CG_kadai_02.html
+++ b/CG_kadai_02.html
@@ -47,7 +47,7 @@ scene.add( head );
 //右目を作成
 var sphereGeometry = new THREE.SphereGeometry( 0.05, 32, 32 ); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x000000} );
+var sphereMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
 var Reye = new THREE.Mesh( sphereGeometry, sphereMaterial );
 Reye.position.set( -0.2, 1.3, 0.45 );
 scene.add( Reye );
@@ -55,7 +55,7 @@ scene.add( Reye );
 //左目を作成
 var sphereGeometry = new THREE.SphereGeometry( 0.05, 32, 32 ); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x000000} );
+var sphereMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
 var Leye = new THREE.Mesh( sphereGeometry, sphereMaterial );
 Leye.position.set( 0.2, 1.3, 0.45 );
 scene.add( Leye );
@@ -63,7 +63,7 @@ scene.add( Leye );
 //口を作成
 var coneGeometry = new THREE.ConeGeometry( 0.08, 0.3, 36 ); 
 //半径、高さ、底面の分割数
-var coneMaterial = new THREE. MeshPhongMaterial( {color: 0xffff00} );
+var coneMaterial = new THREE. MeshStandardMaterial( {color: 0xffff00} );
 var mouse = new THREE.Mesh( coneGeometry, coneMaterial );
 mouse.position.set( 0, 1, .5 );
 mouse.rotation.x = 2;
@@ -72,7 +72,7 @@ scene.add( mouse );
 //体を作成
 var sphereGeometry = new THREE.SphereGeometry( 0.5, 32, 32 ); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x666666} );
+var sphereMaterial = new THREE. MeshStandardMaterial( {color: 0x666666} );
 var body = new THREE.Mesh( sphereGeometry, sphereMaterial );
 body.position.set( 0, 0, 0 );
 body.scale.set(1.2,2,1);
@@ -81,7 +81,7 @@ scene.add( body );
 //右手を作成
 var sphereGeometry = new THREE.SphereGeometry( 0.3, 32, 32 ); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x666666} );
+var sphereMaterial = new THREE.MeshStandardMaterial( {color: 0x666666} );
 var Rhand = new THREE.Mesh( sphereGeometry, sphereMaterial );
 Rhand.position.set( -.8, 0, 0 );
 Rhand.scale.set(.3,1.8,1);
@@ -91,7 +91,7 @@ scene.add( Rhand );
 //左手を作成
 var sphereGeometry = new THREE.SphereGeometry( 0.3, 32, 32 ); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x666666} );
+var sphereMaterial = new THREE.MeshStandardMaterial( {color: 0x666666} );
 var Lhand = new THREE.Mesh( sphereGeometry, sphereMaterial );
 Lhand.position.set( .8, 0, 0 );
 Lhand.scale.set(.3,1.8,1);
@@ -101,7 +101,7 @@ scene.add( Lhand );
 //右足を作成
 var sphereGeometry = new THREE.SphereGeometry( 0.14, 32, 32 ); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0xffff00} );
+var sphereMaterial = new THREE.MeshStandardMaterial( {color: 0xffff00} );
 var Rfoot = new THREE.Mesh( sphereGeometry, sphereMaterial );
 Rfoot.position.set( -0.17, -1, 0 );
 Rfoot.scale.set(1.3,2,0.8);
@@ -111,7 +111,7 @@ scene.add( Rfoot );
 //左足を作成
 var sphereGeometry = new THREE.SphereGeometry( 0.14, 32, 32 ); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0xffff00} );
+var sphereMaterial = new THREE.MeshStandardMaterial( {color: 0xffff00} );
 var Lfoot = new THREE.Mesh( sphereGeometry, sphereMaterial );
 Lfoot.position.set( 0.17, -1, 0 );
 Lfoot.scale.set(1.3,2,0.8);
