--- a/CG_kadai_02.html
+++ b/CG_kadai_02.html
@@ -130,11 +130,17 @@ wall.position.set(1.3,0,-2);
 wall.rotation.y = 1;
 scene.add(wall);
 
+
+//屋根にテクスチャ貼り付け
+var textureLoader = new THREE.TextureLoader(); 
+var texture = textureLoader.load("renga.jpeg");
+var mat = new THREE.MeshPhongMaterial();
+mat.map = texture;
 //屋根を作成
 var coneGeometry = new THREE.ConeGeometry(2.2 , 0.8, 4 ); 
 //半径、高さ、底面の分割数
-var coneMaterial = new THREE. MeshPhongMaterial( {color: 0xff0000} );
-var roof = new THREE.Mesh( coneGeometry, coneMaterial );
+//var coneMaterial = new THREE. MeshPhongMaterial( {color: 0xff0000} );
+var roof = new THREE.Mesh( coneGeometry, mat );
 roof.position.set( 1.3, 1.4, -2 );
 roof.rotation.y = 1.7;
 scene.add( roof );
