--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>WebGL(2)課題</h1>
     <p>
         テクスチャ―マッピング：<a href="CG_kadai_02.html">CG_kadai_02.html</a><br>
-        ペンギンの横にある家の壁紙にテクスチャを付けました。
+        ペンギンにマテリアル(THREE.MeshStandardMaterial)をつけました。
+        家の壁と屋根にテクスチャを付けました。
     </p>
     <p>
         影をつける：<a href="suica.html">suica.html</a><br>
