--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>WebGL(2)課題</h1>
     <p>
         テクスチャ―マッピング：<a href="CG_kadai_02.html">CG_kadai_02.html</a><br>
-        ペンギンにマテリアル(THREE.MeshStandardMaterial)をつけました。<hr>
-        家の壁と屋根にテクスチャを付けました。
+        ペンギンにマテリアル(THREE.MeshStandardMaterial)をつけました。<br>
+        家の壁と屋根にテクスチャを付けました。<br>
     </p>
     <p>
         影をつける：<a href="suica.html">suica.html</a><br>
