--- a/1832074.html
+++ b/1832074.html
@@ -29,13 +29,13 @@
 
         // マテリアルを作成する
         const material = new THREE.SpriteMaterial({
-          map: new THREE.TextureLoader().load('imgs/star.png')
+          map: new THREE.TextureLoader().load('star.png')
         });
         // フォグ（霞）を有効にする
         material.fog = true;
 
         // ビルボードを作成
-        for (let i = 0; i < 1000; i++) {
+        for (let i = 0; i < 3000; i++) {
           const sprite = new THREE.Sprite(material);
           // ランダムな座標に配置
           sprite.position.x = 500 * (Math.random() - 0.5);
