--- a/1832074.html
+++ b/1832074.html
@@ -29,7 +29,7 @@
 
         // マテリアルを作成する
         const material = new THREE.SpriteMaterial({
-          map: new THREE.TextureLoader().load('star.png')
+          map: new THREE.TextureLoader().load('snow.png')
         });
         // フォグ（霞）を有効にする
         material.fog = true;
