--- a/1832074.html
+++ b/1832074.html
@@ -29,7 +29,7 @@
 
         // マテリアルを作成する
         const material = new THREE.SpriteMaterial({
-          map: new THREE.TextureLoader().load('snow.png')
+          map: new THREE.TextureLoader().load('snow1.png')
         });
         // フォグ（霞）を有効にする
         material.fog = true;
@@ -42,7 +42,7 @@
           sprite.position.y = 100 * Math.random() - 40;
           sprite.position.z = 500 * (Math.random() - 0.5);
           // 必要に応じてスケールを調整
-          sprite.scale.set(10, 10, 10);
+          sprite.scale.set(1, 1, 1);
 
           scene.add(sprite);
         }
