--- a/1832074.html
+++ b/1832074.html
@@ -27,7 +27,27 @@
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
 
-        // マテリアルを作成する
+        // マテリアル1を作成する
+        const material = new THREE.SpriteMaterial({
+          map: new THREE.TextureLoader().load('snow1.png')
+        });
+        // フォグ（霞）を有効にする
+        material.fog = true;
+
+        // ビルボードを作成
+        for (let i = 0; i < 1500; i++) {
+            const sprite = new THREE.Sprite(material);
+          // ランダムな座標に配置
+          sprite.position.x = 500 * (Math.random() - 0.5);
+          sprite.position.y = 100 * Math.random() - 40;
+          sprite.position.z = 500 * (Math.random() - 0.5);
+          // 必要に応じてスケールを調整
+          sprite.scale.set(3, 3, 3);
+
+          scene.add(sprite);
+        }
+
+        // マテリアル2を作成する
         const material = new THREE.SpriteMaterial({
           map: new THREE.TextureLoader().load('snow2.png')
         });
@@ -35,7 +55,7 @@
         material.fog = true;
 
         // ビルボードを作成
-        for (let i = 0; i < 3000; i++) {
+        for (let i = 0; i < 1500; i++) {
             const sprite = new THREE.Sprite(material);
           // ランダムな座標に配置
           sprite.position.x = 500 * (Math.random() - 0.5);
