--- a/1832074.html
+++ b/1832074.html
@@ -49,7 +49,7 @@
 
         // マテリアル2を作成する
         const material = new THREE.SpriteMaterial({
-          map: new THREE.TextureLoader().load('snow2.png')
+          map: new THREE.TextureLoader().load('watermelon.png')
         });
         // フォグ（霞）を有効にする
         material.fog = true;
