--- a/1832074.html
+++ b/1832074.html
@@ -29,6 +29,7 @@
         const camera = new THREE.PerspectiveCamera(45, width / height);
         // カメラの初期座標を設定
         camera.position.set(0, 0, -150);
+        camera.rotation.x=1;
 
         // マテリアル1を作成する
         const material = new THREE.SpriteMaterial({
