--- a/1832074_2.html
+++ b/1832074_2.html
@@ -35,7 +35,7 @@
         var box = new THREE.Mesh(geometry, material);
         scene.add(box);
         
-        // マテリアル1を作成する
+        /*// マテリアル1を作成する
         const material = new THREE.SpriteMaterial({
           map: new THREE.TextureLoader().load('snow1.png')
         });
@@ -53,7 +53,7 @@
           sprite.scale.set(3, 3, 3);
 
           scene.add(sprite);
-        }
+        }*/
   
         // 平行光源1
         var directionalLight1 = new THREE.DirectionalLight(0xffffff);
