--- a/1832074_2.html
+++ b/1832074_2.html
@@ -2,7 +2,6 @@
   <head>
     <meta charset="utf-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script src="OrbitControls.js"></script>
     <script>
       // ページの読み込みを待つ
       window.addEventListener('load', init);
@@ -11,11 +10,13 @@
         // サイズを指定
         const width = 960;
         const height = 540;
+        let rot = 0; // 角度
 
         // レンダラーを作成
         const renderer = new THREE.WebGLRenderer({
           canvas: document.querySelector('#myCanvas')
         });
+        renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(width, height);
 
         // シーンを作成
@@ -23,59 +24,56 @@
 
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
-        // カメラの初期座標を設定
-        camera.position.set(0, 0, 1000);
 
-        // カメラコントローラーを作成
-        const controls = new THREE.OrbitControls(camera);
+        // 星屑を作成します (カメラの動きをわかりやすくするため)
+        createStarField();
 
-        // 箱を作成(原点に作成)
-        var geometry = new THREE.BoxGeometry(300, 300, 300);
-        var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
-        var box = new THREE.Mesh(geometry, material);
-        scene.add(box);
+        function createStarField() {
+          // 形状データを作成
+          const geometry = new THREE.Geometry();
+          // 配置する範囲
+          const SIZE = 3000;
+          // 配置する個数
+          const LENGTH = 1000;
+          for (let i = 0; i < LENGTH; i++) {
+            geometry.vertices.push(
+              new THREE.Vector3(
+                SIZE * (Math.random() - 0.5),
+                SIZE * (Math.random() - 0.5),
+                SIZE * (Math.random() - 0.5)
+              )
+            );
+          }
+          // マテリアルを作成
+          const material = new THREE.PointsMaterial({
+            // 一つ一つのサイズ
+            size: 10,
+            // 色
+            color: 0xffffff
+          });
 
-        //形状ジオメトリーを作る
-        const geometry = new THREE.Geometry();
-        
-        //配置する範囲
-        const SIZE = 3000;
-        //配置する個数
-        const LENGTH = 1000;
-        for(let i = 0; i < LENGTH; i++){
-          geometry.vertices.push(new THREE.Vector3(
-            SIZE * (Math.random() - 0.5),
-            SIZE * (Math.random() - 0.5),
-            SIZE * (Math.random() - 0.5),
-          ));
+          // 物体を作成
+          const mesh = new THREE.Points(geometry, material);
+          scene.add(mesh);
         }
-        //マテリアルを作成
-        const material = new THREE.PointMaterial({
-          //1つ１つのサイズ
-          size: 10,
-          //色
-          color:0xFFFFFF,
-        })
-        const mesh = new THEREE.Points(gepmetry,material);
-        scene.add(mesh);
-        
-        // 平行光源1
-        var directionalLight1 = new THREE.DirectionalLight(0xffffff);
-        directionalLight1.position.set(100, 100, 100);
-        // シーンに追加
-        scene.add(directionalLight1);
-        // 平行光源2
-        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
-        directionalLight2.position.set(-100, 100, 100);
-        // シーンに追加
-        scene.add(directionalLight2);
 
         tick();
 
         // 毎フレーム時に実行されるループイベントです
         function tick() {
+          rot += 1;
+
+          // ラジアンに変換する
+          const radian = (rot * Math.PI) / 180;
+          // 角度に応じてカメラの位置を設定
+          camera.position.x = 1000 * Math.sin(radian);
+          camera.position.z = 1000 * Math.cos(radian);
+          // 原点方向を見つめる
+          camera.lookAt(new THREE.Vector3(0, 0, 0));
+
           // レンダリング
           renderer.render(scene, camera);
+
           requestAnimationFrame(tick);
         }
       }
