--- a/1832074_2.html
+++ b/1832074_2.html
@@ -61,6 +61,7 @@
 
         // 毎フレーム時に実行されるループイベントです
         function tick() {
+          //カメラの速さ
           rot += 0.1;
 
           // ラジアンに変換する
