--- a/1832074_2.html
+++ b/1832074_2.html
@@ -21,6 +21,7 @@
 
         // シーンを作成
         const scene = new THREE.Scene();
+        scene.fog = new THREE.Fog(0xf9f9f9, 800, 1500);
 
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
