--- a/1832074_2.html
+++ b/1832074_2.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script>
       // ページの読み込みを待つ
