--- a/1832074_2.html
+++ b/1832074_2.html
@@ -22,10 +22,17 @@
 
         // シーンを作成
         const scene = new THREE.Scene();
-        scene.fog = new THREE.Fog(0xf9f9f9, 800, 2000);
+        scene.fog = new THREE.Fog(0xf9f9f9, 800, 1500);
 
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
+
+        // マテリアルを作成する
+        const material = new THREE.SpriteMaterial({
+          map: new THREE.TextureLoader().load('snow1.png')
+        });
+        // フォグ（霞）を有効にする
+        material.fog = true;
 
         // ビルボードを作成
         for (let i = 0; i < 1000; i++) {
