--- a/1832074.html
+++ b/1832074.html
@@ -59,7 +59,7 @@
 
         const sphereGeometry = new THREE.SphereGeometry( 10, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
-        const sphereMaterial = new THREE. MeshStandardMaterial( {color: 0x999999} );
+        const sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x999999} );
         const head = new THREE.Mesh( sphereGeometry, sphereMaterial );
         head.position.set( 0, -30, 0 );
         scene.add( head );
