--- a/1832074.html
+++ b/1832074.html
@@ -5,6 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="OrbitControls.js"></script>
     <script>
+      <title>期末課題</title>
       // ページの読み込みを待つ
       window.addEventListener('load', init);
 
