--- a/1832074.html
+++ b/1832074.html
@@ -21,7 +21,7 @@
         });
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(width, height);
-        renderer.setClearColor(0xf9f9f9, 1.0);
+        //renderer.setClearColor(0xf9f9f9, 1.0);
 
         // シーンを作成
         const scene = new THREE.Scene();
