--- a/1832074.html
+++ b/1832074.html
@@ -19,7 +19,7 @@
         const renderer = new THREE.WebGLRenderer({
           canvas: document.querySelector('#myCanvas')
         });
-        renderer.setPixelRatio(window.devicePixelRatio);
+        //renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(width, height);
         //renderer.setClearColor(0xf9f9f9, 1.0);
 
