--- a/1832074.html
+++ b/1832074.html
@@ -63,7 +63,7 @@
         const floormaterial = new THREE.MeshPhongMaterial( {color: 0xffffff, side: THREE.DoubleSide} );
         const floor = new THREE.Mesh( floorgeometry, floormaterial );
         floor.position.y = -39; 
-        plane.rotation.x = 1.57;
+        floor.rotation.x = 1.57;
         scene.add( floor );
 
 
