--- a/1832074.html
+++ b/1832074.html
@@ -59,9 +59,16 @@
         plane.position.y = -40;
         scene.add(plane);
 
+
+        //屋根にテクスチャ貼り付け
+        const textureLoader = new THREE.TextureLoader(); 
+        const texture = textureLoader.load("renga.jpeg");
+        const mat = new THREE.MeshPhongMaterial();
+        mat.map = texture;
+
         const floorgeometry = new THREE.PlaneGeometry( 500, 500, 10 );
-        const floormaterial = new THREE.MeshPhongMaterial( {color: 0xffffff, side: THREE.DoubleSide} );
-        const floor = new THREE.Mesh( floorgeometry, floormaterial );
+        //const floormaterial = new THREE.MeshPhongMaterial( {color: 0xffffff, side: THREE.DoubleSide} );
+        const floor = new THREE.Mesh( floorgeometry, mat );
         floor.position.y = -39; 
         floor.rotation.x = 1.57;
         scene.add( floor );
