--- a/1832074.html
+++ b/1832074.html
@@ -61,14 +61,14 @@
 
 
         //床にテクスチャ貼り付け
-        const textureLoader = new THREE.TextureLoader(); 
-        const texture = textureLoader.load("renga.jpeg");
-        const mat = new THREE.MeshPhongMaterial();
-        mat.map = texture;
+        //const textureLoader = new THREE.TextureLoader(); 
+        //const texture = textureLoader.load("renga.jpeg");
+        //const mat = new THREE.MeshPhongMaterial();
+        //mat.map = texture;
 
         const floorgeometry = new THREE.PlaneGeometry( 500, 500, 10 );
-        const floormaterial = new THREE.MeshPhongMaterial( {side: THREE.DoubleSide} );
-        const floor = new THREE.Mesh( floorgeometry, mat );
+        const floormaterial = new THREE.MeshPhongMaterial( {color: 0xffffff, side: THREE.DoubleSide} );
+        const floor = new THREE.Mesh( floorgeometry, floormaterial );
         floor.position.y = -39; 
         floor.rotation.x = 1.57;
         scene.add( floor );
