--- a/1832074.html
+++ b/1832074.html
@@ -67,7 +67,7 @@
         mat.map = texture;
 
         const floorgeometry = new THREE.PlaneGeometry( 500, 500, 10 );
-        const floormaterial = new THREE.MeshPhongMaterial( {color: 0xffffff, side: THREE.DoubleSide} );
+        //const floormaterial = new THREE.MeshPhongMaterial( {color: 0xffffff, side: THREE.DoubleSide} );
         const floor = new THREE.Mesh( floorgeometry, mat );
         floor.position.y = -39; 
         floor.rotation.x = -1.57;
