--- a/1832074.html
+++ b/1832074.html
@@ -62,7 +62,7 @@
 
         //床にテクスチャ貼り付け
         var textureLoader = new THREE.TextureLoader(); 
-        var texture = textureLoader.load("renga.jpeg");
+        var texture = textureLoader.load("snowroad.jpg");
         var mat = new THREE.MeshPhongMaterial();
         mat.map = texture;
 
