--- a/1832074_2.html
+++ b/1832074_2.html
@@ -22,7 +22,7 @@
 
         // シーンを作成
         const scene = new THREE.Scene();
-        scene.fog = new THREE.Fog(0xf9f9f9, 50, +2000);
+        scene.fog = new THREE.Fog(0x000000, 50, 2000);
 
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
