--- a/1832074.html
+++ b/1832074.html
@@ -25,7 +25,7 @@
 
         // シーンを作成
         const scene = new THREE.Scene();
-        scene.fog = new THREE.Fog(0xf9f9f9, 200, 300);
+        scene.fog = new THREE.Fog(0x000000, 200, 300);
 
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
@@ -52,12 +52,6 @@
 
           scene.add(sprite);
         }
-
-
-        // 地面を作成
-        const plane = new THREE.GridHelper(300, 10, 0x888888, 0x888888);
-        plane.position.y = -40;
-        scene.add(plane);
 
 
         //床にテクスチャ貼り付け
