--- a/1832074.html
+++ b/1832074.html
@@ -83,7 +83,7 @@
         scene.add(directionalLight1);
         */
          // 光源（環境光）
-         const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
+         const ambientLight = new THREE.AmbientLight(0xeeeeee, 1.0);
         scene.add(ambientLight);
 
         tick();
