--- a/1832074.html
+++ b/1832074.html
@@ -69,7 +69,7 @@
         scene.add( floor );
 
 
-        //雪だるまを作成
+        //雪だるまを作成する
         const sphereGeometry = new THREE.SphereGeometry( 10, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const sphereMaterial = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
@@ -84,8 +84,15 @@
         scene.add(directionalLight1);
         */
          // 光源（環境光）
-         const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
+        const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
         scene.add(ambientLight);
+        // 照明を作成SpotLight( 色, 光の強さ, 距離, 照射角, ボケ具合, 減衰率)
+        var light = new THREE.SpotLight(0xffffff, 10, 100, Math.PI / 6, 0.1);
+        light.position.set(0,-20,-5);
+      
+        // ライトに影を有効にする
+        light.castShadow = true;
+        scene.add(light);
 
         tick();
 
