--- a/1832074.html
+++ b/1832074.html
@@ -77,12 +77,7 @@
         head.position.set( 0, -30, 0 );
         scene.add( head );
 
-        /*// 平行光源1
-        const directionalLight1 = new THREE.DirectionalLight(0xffffff);
-        directionalLight1.position.set(1, 1, 1);
-        // シーンに追加
-        scene.add(directionalLight1);
-        */
+
          // 光源（環境光）
         const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
         scene.add(ambientLight);
@@ -92,12 +87,10 @@
         light.position.set(0,-36,0);
         light.rotation.x=1.5;
 
-        // ヘルパーを作成
+        // ヘルパーを作成
         const lightHelper = new THREE.SpotLightHelper(light);
         scene.add(lightHelper);
 
-
-      
         // ライトに影を有効にする
         light.castShadow = true;
         scene.add(light);
