--- a/1832074.html
+++ b/1832074.html
@@ -74,7 +74,7 @@
         //半径、垂直方向の分割数、水平方向の分割数
         const sphereMaterial = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
         const head = new THREE.Mesh( sphereGeometry, sphereMaterial );
-        head.position.set( 0, 0, 0 );
+        head.position.set( 0, -30, 0 );
         scene.add( head );
 
 
@@ -84,7 +84,7 @@
 
         // 照明を作成SpotLight( 色, 光の強さ, 距離, 照射角, ボケ具合, 減衰率)
         const light = new THREE.SpotLight(0xffffff, 4, 100, Math.PI / 6, 0.5);
-        light.position.set(0,-25,0);
+        light.position.set(0,0,0);
 
         // ヘルパーを作成
         const lightHelper = new THREE.SpotLightHelper(light);
