--- a/1832074.html
+++ b/1832074.html
@@ -81,9 +81,17 @@
         const sphere = new THREE.SphereGeometry( 10, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const sphere1 = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
-        const body = new THREE.Mesh( sphere, sphere1 );
-        body.position.set( 0, -15, -10 );
-        scene.add( body );
+        const body1 = new THREE.Mesh( sphere, sphere1 );
+        body1.position.set( 0, -15, -10 );
+        scene.add( body1 );
+
+        //雪だるまを作成する
+        const sphere = new THREE.SphereGeometry( 10, 32, 32 ); 
+        //半径、垂直方向の分割数、水平方向の分割数
+        const sphere1 = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
+        const body2 = new THREE.Mesh( sphere, sphere1 );
+        body2.position.set( 0, 0, -10 );
+        scene.add( body2 );
 
 
          // 光源（環境光）
