--- a/1832074.html
+++ b/1832074.html
@@ -78,18 +78,18 @@
         scene.add( head );
 
         //雪だるまを作成する
-        const sphere = new THREE.SphereGeometry( 10, 32, 32 ); 
+        const bodysphere = new THREE.SphereGeometry( 10, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const sphere1 = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
-        const body1 = new THREE.Mesh( sphere, sphere1 );
+        const body1 = new THREE.Mesh( bodysphere, sphere1 );
         body1.position.set( 0, -15, -10 );
         scene.add( body1 );
 
         //雪だるまを作成する
-        const sphere = new THREE.SphereGeometry( 10, 32, 32 ); 
+        const body2sphere = new THREE.SphereGeometry( 10, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
-        const sphere1 = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
-        const body2 = new THREE.Mesh( sphere, sphere1 );
+        const sphere2 = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
+        const body2 = new THREE.Mesh( body2sphere, sphere2 );
         body2.position.set( 0, 0, -10 );
         scene.add( body2 );
 
