--- a/1832074.html
+++ b/1832074.html
@@ -70,12 +70,12 @@
 
 
         //雪だるまを作成する
-        const sphereGeometry = new THREE.SphereGeometry( 10, 32, 32 ); 
+        const sphereGeometry = new THREE.SphereGeometry( 15, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const sphereMaterial = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
-        const head = new THREE.Mesh( sphereGeometry, sphereMaterial );
-        head.position.set( 0, -30, -10 );
-        scene.add( head );
+        const body2 = new THREE.Mesh( sphereGeometry, sphereMaterial );
+        body2.position.set( 0, -30, -10 );
+        scene.add( body2 );
 
         //雪だるまを作成する
         const bodysphere = new THREE.SphereGeometry( 10, 32, 32 ); 
@@ -89,9 +89,9 @@
         const body2sphere = new THREE.SphereGeometry( 10, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const sphere2 = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
-        const body2 = new THREE.Mesh( body2sphere, sphere2 );
-        body2.position.set( 0, 0, -10 );
-        scene.add( body2 );
+        const head = new THREE.Mesh( body2sphere, sphere2 );
+        head.position.set( 0, 0, -10 );
+        scene.add( head );
 
 
          // 光源（環境光）
