--- a/1832074.html
+++ b/1832074.html
@@ -69,6 +69,7 @@
         const floor = new THREE.Mesh( floorgeometry, mat );
         floor.position.y = -39; 
         floor.rotation.x = -1.57;
+        floor.receiveShadow = true;
         scene.add( floor );
 
 
