--- a/1832074.html
+++ b/1832074.html
@@ -77,11 +77,11 @@
         const sphereGeometry = new THREE.SphereGeometry( 15, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const sphereMaterial = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
-        const body2 = new THREE.Mesh( sphereGeometry, sphereMaterial );
-        body2.position.set( 0, -30, -10 );
-        body2.castShadow = true; 
-        body2.receiveShadow = true;
-        scene.add( body2 );
+        const body = new THREE.Mesh( sphereGeometry, sphereMaterial );
+        body.position.set( 0, -30, -10 );
+        body.castShadow = true; 
+        body.receiveShadow = true;
+        scene.add( body );
 
         //雪だるまを作成する
         const body2sphere = new THREE.SphereGeometry( 10, 32, 32 ); 
