--- a/1832074.html
+++ b/1832074.html
@@ -76,8 +76,8 @@
         //雪だるまを作成する
         const snowmanGeometry = new THREE.SphereGeometry( 15, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
-        const sphereMaterial = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
-        const body = new THREE.Mesh( snowmanGeometry, sphereMaterial );
+        const snowmanMaterial = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
+        const body = new THREE.Mesh( snowmanGeometry, snowmanMaterial );
         body.position.set( 0, -30, -10 );
         body.castShadow = true; 
         body.receiveShadow = true;
