--- a/1832074.html
+++ b/1832074.html
@@ -84,10 +84,10 @@
         scene.add( body );
 
         //雪だるまを作成する
-        const body2sphere = new THREE.SphereGeometry( 10, 32, 32 ); 
+        const SnowmanGeometry = new THREE.SphereGeometry( 10, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const sphere2 = new THREE. MeshStandardMaterial( {color: 0xFFFFFF} );
-        const head = new THREE.Mesh( body2sphere, sphere2 );
+        const head = new THREE.Mesh( SnowmanGeometry, sphere2 );
         head.position.set( 0, -10, -10 );
         head.castShadow = true; 
         head.receiveShadow = true;
