--- a/1832074.html
+++ b/1832074.html
@@ -95,6 +95,7 @@
 
         //マフラー
         var cylinderGeometry = new THREE.CylinderGeometry( 0.04, 0.04, 0.2, 120 );
+        //上の底面の半径、下の底面の半径、高さ、分割数
         var cylinderMaterial = new THREE.MeshPhongMaterial( {color: 0x0000ff} );
         var cylinder = new THREE.Mesh( cylinderGeometry, cylinderMaterial );
         cylinder.castShadow = true; 
