--- a/1832074.html
+++ b/1832074.html
@@ -102,6 +102,16 @@
         scarf.position.set( 0, -13, -10 );
 
 
+        //雪だるま全体のオブジェクト
+        const snowman = new THREE.Group()
+        snowman.add(head);
+        snowman.add(body);
+        snowman.add(scarf);
+        
+        //雪だるまの原点
+        head.position.set( 0, 0, -10 );
+
+
          // 光源（環境光）
         const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
         scene.add(ambientLight);
@@ -118,6 +128,7 @@
         // ライトに影を有効にする
         light.castShadow = true;
         scene.add(light);
+
 
         tick();
 
