--- a/1832074.html
+++ b/1832074.html
@@ -109,7 +109,7 @@
         snowman.add(scarf);
         
         //雪だるまの原点
-        head.position.set( 0, 0, -10 );
+        snowman.position.set( 0, 0, -10 );
 
 
          // 光源（環境光）
