--- a/1832074.html
+++ b/1832074.html
@@ -94,12 +94,12 @@
         scene.add( head );
 
         //マフラー
-        const scarfGeometry = new THREE.CylinderGeometry( 10, 10, 10, 32 );
+        const scarfGeometry = new THREE.CylinderGeometry( 8 , 8, 3.5, 32 );
         //上の底面の半径、下の底面の半径、高さ、分割数
-        const scarfMaterial = new THREE.MeshPhongMaterial( {color: 0x0000ff} );
+        const scarfMaterial = new THREE.MeshPhongMaterial( {color: 0xff0000} );
         const scarf = new THREE.Mesh( scarfGeometry, scarfMaterial );
         scarf.castShadow = true; 
-        scarf.position.set( 0, -13, 0 );
+        scarf.position.set( 0, -16.5, 0 );
 
 
         //雪だるま全体のオブジェクト
