--- a/1832074.html
+++ b/1832074.html
@@ -102,6 +102,15 @@
         scarf.receiveShadow = true;
         scarf.position.set( 0, -16.5, 0 );
 
+        //口を作成
+        const mouseGeometry = new THREE.ConeGeometry( 10, 10, 32 ); 
+        //半径、高さ、底面の分割数
+        const mouseMaterial = new THREE. MeshStandardMaterial( {color: 0xffff00} );
+        const mouse = new THREE.Mesh( mouseGeometry, mouseMaterial );
+        mouse.position.set( 0, -10, -5 );
+        mouse.rotation.x = 2;
+        scene.add( mouse );
+
 
         //雪だるま全体のオブジェクト
         const snowman = new THREE.Group()
