--- a/1832074.html
+++ b/1832074.html
@@ -117,6 +117,7 @@
         snowman.add(head);
         snowman.add(body);
         snowman.add(scarf);
+        snowman.add(mouse);
         
         //雪だるまの原点
         snowman.position.set( 0, 0, -10 );
