--- a/1832074.html
+++ b/1832074.html
@@ -107,8 +107,10 @@
         //半径、高さ、底面の分割数
         const mouseMaterial = new THREE. MeshStandardMaterial( {color: 0xffff00} );
         const mouse = new THREE.Mesh( mouseGeometry, mouseMaterial );
-        mouse.position.set( 0, -10, -5 );
-        mouse.rotation.x = 2;
+        mouse.position.set( 0, -10, 5 );
+        mouse.rotation.x = 1.5;
+        mouse.castShadow = true; 
+        mouse.receiveShadow = true;
         scene.add( mouse );
 
 
