--- a/1832074.html
+++ b/1832074.html
@@ -105,7 +105,7 @@
         //口を作成
         const mouseGeometry = new THREE.ConeGeometry( 1, 10, 32 ); 
         //半径、高さ、底面の分割数
-        const mouseMaterial = new THREE. MeshStandardMaterial( {color: 0xffff00} );
+        const mouseMaterial = new THREE. MeshStandardMaterial( {color: 0xffaa00} );
         const mouse = new THREE.Mesh( mouseGeometry, mouseMaterial );
         mouse.position.set( 0, -9, +15 );
         mouse.rotation.x = 1;
