--- a/1832074.html
+++ b/1832074.html
@@ -168,10 +168,10 @@
 
           
           // カメラの自動移動
-          camera.position.x = 100 * Math.sin(Date.now() / 2000);
+          /*camera.position.x = 100 * Math.sin(Date.now() / 2000);
           camera.position.z = 100 * Math.cos(Date.now() / 2000);
           camera.position.y = 50 * Math.sin(Date.now() / 1000) + 60;
-          camera.lookAt(new THREE.Vector3(0, 0, 0));
+          camera.lookAt(new THREE.Vector3(0, 0, 0));*/
           
 
           // レンダリング
