--- a/1832074.html
+++ b/1832074.html
@@ -118,7 +118,7 @@
         const ReyeMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
         const Reye = new THREE.Mesh( ReyeGeometry, ReyeMaterial );
         Reye.position.set( -3, -4, +8 );
-        Rhand.scale.set(1,1.2,1);
+        //Reye.scale.set(1,1.2,1);
         scene.add( Reye );
 
         //左目を作成
