--- a/1832074.html
+++ b/1832074.html
@@ -127,6 +127,7 @@
         const LeyeMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
         const Leye = new THREE.Mesh( LeyeGeometry, LeyeMaterial );
         Leye.position.set( 3, -4, +8 );
+        //Leye.scale.set(1,1.2,1);
         scene.add( Leye );
 
         //ボタンを作成
