--- a/1832074.html
+++ b/1832074.html
@@ -130,19 +130,19 @@
         //Leye.scale.set(1,1.2,1);
         scene.add( Leye );
 
-        /*//ボタンを作成
+        //ボタンを作成
         for (let i = 0; i < 3; i++) {
         const buttonGeometry = new THREE.SphereGeometry( 1, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const buttonMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
         const button = new THREE.Mesh( buttonGeometry, buttonMaterial );
         if(i=1){
-          button.position.set( 0, ( -18 - ( 4*i )), 2+( 2*i ))
+          button.position.set( 0, ( -18 - ( 4*i )), 2+( 2*i ));
         }else{
-          button.position.set( 0, ( -18 - ( 4*i )), 2)
+          button.position.set( 0, ( -18 - ( 4*i )), 2);
         }
         scene.add( button );
-        }*/
+        }
 
 
         //雪だるま全体のオブジェクト
