--- a/1832074.html
+++ b/1832074.html
@@ -136,11 +136,7 @@
         //半径、垂直方向の分割数、水平方向の分割数
         const buttonMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
         const button = new THREE.Mesh( buttonGeometry, buttonMaterial );
-        //if(i=1){
-          button.position.set( 0, ( -18 - ( 4*i )), .5 + ( 2*i ));
-        //}else{
-          //button.position.set( 0, ( -18 - ( 4*i )), 2);
-        //}
+        button.position.set( 0, ( -18 - ( 4*i )), .5 + ( 2*i ));
         scene.add( button );
         }
 
@@ -169,8 +165,8 @@
 
 
         // ヘルパーを作成
-        const lightHelper = new THREE.SpotLightHelper(light);
-        scene.add(lightHelper);
+        /*const lightHelper = new THREE.SpotLightHelper(light);
+        scene.add(lightHelper);*/
 
         // ライトに影を有効にする
         light.castShadow = true;
@@ -194,7 +190,7 @@
           renderer.render(scene, camera);
           
           // ヘルパーを更新
-          lightHelper.update();
+          //lightHelper.update();
           
           requestAnimationFrame(tick);
         }
