--- a/1832074.html
+++ b/1832074.html
@@ -6,6 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="OrbitControls.js"></script>
     <script>
+      <h1>WebGL最終作品</h1>
   
       // ページの読み込みを待つ
       window.addEventListener('load', init);
