--- a/1832074.html
+++ b/1832074.html
@@ -124,6 +124,7 @@
         const Reye = new THREE.Mesh( ReyeGeometry, ReyeMaterial );
         Reye.position.set( -3, -4, +8 );
         Reye.scale.set(1,2,1);
+        Reye.rotation.x = -0.52;
         scene.add( Reye );
 
         //左目を作成
