--- a/1832074.html
+++ b/1832074.html
@@ -134,6 +134,7 @@
         const Leye = new THREE.Mesh( LeyeGeometry, LeyeMaterial );
         Leye.position.set( 3, -4, +8 );
         Leye.scale.set(1,2,1);
+        Leye.rotation.x = -0.52;
         scene.add( Leye );
 
         //ボタンを作成
