--- a/1832074.html
+++ b/1832074.html
@@ -21,6 +21,7 @@
         });
         //renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(width, height);
+        //背景の色
         //renderer.setClearColor(0xf9f9f9, 1.0);
 
         // レンダラー：シャドウを有効にする
@@ -35,7 +36,7 @@
         
         ///*OrbitControl用
         // カメラの初期座標を設定
-        camera.position.set(-50, 60, 150);
+        camera.position.set(-70, 65, 150);
         camera.lookAt(new THREE.Vector3(0, -10, 0));
         // カメラコントローラーを作成
         const controls = new THREE.OrbitControls(camera);//*/
