--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <h2>最終作品</h2>
     <p>
         OrbitControlを有効化させたもの<br>
-        <a href="1832074.html">1832074.html</a>,<br>
+        <a href="1832074.html">1832074.html</a><br>
     </p>
     <p>
-        
+        カメラの自動移動<br>
+        <a href="1832074_1.html">1832074_1.html</a>,<br>
     </p>
 </body>
 </html>
