--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>
         OrbitControlを有効化させたもの<br>
         <a href="1832074.html">1832074.html</a><br>
+        <a href="ナポリの食卓.xlsx">test</a><br>
     </p>
     <p>
         カメラの自動移動<br>
