--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <p>
         OrbitControlを有効化させたもの<br>
         <a href="1832074.html">1832074.html</a><br>
-        <a href="ナポリの食卓.xlsx">test</a><br>
+        <a href="">1832074.htmlレポート</a><br>
     </p>
     <p>
         カメラの自動移動<br>
         <a href="1832074_1.html">1832074_1.html</a><br>
+        <a href="">1832074_1.htmlレポート</a><br>
     </p>
 </body>
 </html>
