--- a/1832074.html
+++ b/1832074.html
@@ -193,5 +193,6 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
+    <h1><a href="https://Shinji-Sugasawa.github.io/">戻る</a><br>
   </body>
 </html>
