--- a/1832074.html
+++ b/1832074.html
@@ -138,7 +138,7 @@
         Leye.position.set( 3, -4, +8 );
         Leye.scale.set(1,2,1);
         Leye.castShadow = true; 
-        mouse.receiveShadow = true;
+        Leye.receiveShadow = true;
         Leye.rotation.x = -0.52;
         scene.add( Leye );
 
