--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>
         OrbitControlを有効化させたもの<br>
         <a href="1832074.html">1832074.html</a><br>
-        <a href="">1832074.htmlレポート</a><br>
+        <a href="1832074.docx">1832074.htmlレポート</a><br>
     </p>
     <p>
         カメラの自動移動<br>
