--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
         <a href="1832074.docx">1832074.htmlレポート</a><br>
     </p>
     <p>
-        カメラの自動移動<br>
+        カメラの自動移動ver.<br>
         <a href="1832074_1.html">1832074_1.html</a><br>
-        <a href="">1832074_1.htmlレポート</a><br>
     </p>
 </body>
 </html>
